starting to code views

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Equipos de futbol
+  div
+    label Ingrese un equipo: 
+    input(
+      type= 'text'
+      class= 'ingresar'
+    ) 
