Added more in the views

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,29 @@ block content
     label Ingrese un equipo: 
     input(
       type= 'text'
-      class= 'ingresar'
+      class= 'nombreT'
+    )
+    br
+    label Ingrese el pais de origen: 
+    input(
+      type= 'text'
+      class= 'pais'
+    )
+    br
+    label Ingrese el director tecnico: 
+    input(
+      type= 'text'
+      class= 'director'
     ) 
+    br
+    label Ingrese el capitan: 
+    input(
+      type= 'text'
+      class= 'capitan'
+    )
+    br
+    label Ingrese la liga a la que pertence el equipo: 
+    input(
+      type= 'text'
+      class= 'liga'
+    )      
