ADD&FIX: models and controllers

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,10 @@
-body
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap')
+
+$Montserrat: 'Montserrat', sans-serif;
+
+body 
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font-family: $Montserrat
   background-image: url("../images/soccer.jpg")
 a
   color: #00B7FF
