--- a/views/index.pug
+++ b/views/index.pug
@@ -31,4 +31,20 @@ block content
     input(
       type= 'text'
       class= 'liga'
-    )      
+    )
+    hr
+  div
+    section
+      table
+        thead
+          tr
+            th Equipo
+            th Pais
+            th Director técnico
+            th capitán
+            th liga
+          tbody(
+            id = "table_body"
+          )  
+
+              
