--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-image: url("../images/soccer.jpg"); }
 
 a {
