--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -6,5 +6,51 @@ body
   padding: 50px
   font-family: $Montserrat
   background-image: url("../images/soccer.jpg")
+  padding: 10px
 a
   color: #00B7FF
+
+th
+  margin: 0px
+  padding: 0px
+  border: 2px solid black
+  border-color: rgb(0, 0, 0)  
+
+table
+  margin: 0px
+  padding: 0px
+  border: 2px solid black
+  border-color: rgb(0, 0, 0)
+  
+hr
+  border-color: rgb(200, 0, 0)
+  size: 5px
+
+
+.btn
+  size: 50px
+  color: rgb(253, 253, 253)
+  background-color: rgb(10,10,200)
+
+.Dbtn
+  margin: 10px
+  size: 50px
+  color: rgb(253, 253, 253)
+  background-color: #c50000
+
+.Ebtn
+  margin: 10px
+  size: 50px
+  color: rgb(253, 253, 253)
+  background-color: #00c500
+
+.Rbtn
+  margin: 10px
+  size: 50px
+  color: rgb(253, 253, 253)
+  background-color: #b8c500
+
+label
+  color: rgb(4, 26, 105)
+  font-size: 20px
+  font-weight: bold
