--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,9 +3,11 @@ html
   head
     title Teams
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="../public/javascripts/main.js")     
   body
     block content
     br
     hr
     footer
       p Copyright &copy; 2019
+  
